fixed spacing on color selectors

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -151,7 +151,7 @@ html {
 
 #img-underline {
   position: absolute;
-  top: 6em;
+  top: 6.5em;
 }
 
 #url-label {
@@ -211,7 +211,7 @@ html {
 
 #border-c-underline {
   position: absolute;
-  top: 6em;
+  top: 6.5em;
 }
 
 #border-color {
@@ -263,7 +263,7 @@ html {
 
 #shadow-clr-underline {
   position: absolute;
-  top: 6em;
+  top: 6.5em;
 }
 
 #alpha {
